--- a/src/pages/guidelines/typography/code.mdx
+++ b/src/pages/guidelines/typography/code.mdx
@@ -105,7 +105,7 @@ You can include a token in your Sass file by writing:
 ```scss
 @use '@carbon/type';
 
-@include type-style('productive-heading-01');
+@include type.type-style('productive-heading-01');
 ```
 
 ### Type classes
