fix(vanilla): udpate cdn links for v10

--- a/src/pages/developing/frameworks/vanilla.mdx
+++ b/src/pages/developing/frameworks/vanilla.mdx
@@ -95,8 +95,8 @@ files from `carbon-components` available on
 
 | Scripts | URL                                                                  |
 | ------- | -------------------------------------------------------------------- |
-| CSS     | https://unpkg.com/carbon-components/css/carbon-components.min.css    |
-| ES5     | https://unpkg.com/carbon-components/scripts/carbon-components.min.js |
+| CSS     | https://unpkg.com/carbon-components@10.56.0/css/carbon-components.min.css    |
+| ES5     | https://unpkg.com/carbon-components@10.56.0/scripts/carbon-components.min.js |
 
 ### CodePen
 
