docs(frameworks): update framework support pages

--- a/src/pages/developing/frameworks/angular.mdx
+++ b/src/pages/developing/frameworks/angular.mdx
@@ -1,16 +1,17 @@
 ---
 title: Frameworks
 description:
-  The Carbon Design System is built React first. We also support core parts of
-  the system in vanilla JS, Angular, Vue, Svelte, and web components.
+  The Carbon Design System is built React first, with official support for Web
+  Components. We also support core parts of the system in Angular, vanilla JS,
+  Vue, and Svelte.
 tabs:
   [
     'React',
-    'Vanilla',
+    'Web Components',
     'Angular',
+    'Vanilla',
     'Vue',
     'Svelte',
-    'Web Components',
     'Other frameworks',
   ]
 ---
@@ -29,6 +30,8 @@ and production work.
 The Angular library is maintained by members of the Carbon community. For
 support, contact the
 [Carbon Angular team](https://github.com/IBM/carbon-components-angular/issues/new).
+
+v11 upgrade for Carbon Web Components is coming soon.
 
 </InlineNotification>
 
