--- a/src/pages/developing/frameworks/web-components.mdx
+++ b/src/pages/developing/frameworks/web-components.mdx
@@ -1,16 +1,17 @@
 ---
 title: Frameworks
 description:
-  The Carbon Design System is built React first. We also support core parts of
-  the system in vanilla JS, Angular, Vue, Svelte, and web components.
+  The Carbon Design System is built React first, with official support for Web
+  Components. We also support core parts of the system in Angular, vanilla JS,
+  Vue, and Svelte.
 tabs:
   [
     'React',
-    'Vanilla',
+    'Web Components',
     'Angular',
+    'Vanilla',
     'Vue',
     'Svelte',
-    'Web Components',
     'Other frameworks',
   ]
 ---
@@ -28,9 +29,10 @@ This library uses Custom Elements v1 and Shadow DOM v1 specs.
 
 <InlineNotification>
 
-The web components library is maintained by members of the Carbon community. For
-support, contact the
+For support, contact the
 [Carbon Web Components team](https://github.com/carbon-design-system/carbon-web-components/issues/new/choose).
+
+v11 upgrade for Carbon Web Components is coming soon.
 
 </InlineNotification>
 
