--- a/src/pages/developing/frameworks/other-frameworks.mdx
+++ b/src/pages/developing/frameworks/other-frameworks.mdx
@@ -1,26 +1,27 @@
 ---
 title: Frameworks
 description:
-  The Carbon Design System is built React first. We also support core parts of
-  the system in vanilla JS, Angular, Vue, Svelte, and web components.
+  The Carbon Design System is built React first, with official support for Web
+  Components. We also support core parts of the system in Angular, vanilla JS,
+  Vue, and Svelte.
 tabs:
   [
     'React',
-    'Vanilla',
+    'Web Components',
     'Angular',
+    'Vanilla',
     'Vue',
     'Svelte',
-    'Web Components',
     'Other frameworks',
   ]
 ---
 
 <PageDescription>
 
-The Carbon Design System is built React first. We also support core parts of the
-system in vanilla JS, Angular, Vue, Svelte, and web components. If you’re using
-a different framework, you can still build components by following the
-guidelines below.
+The Carbon Design System is built React first, with official support for Web
+Components. We also support core parts of the system in Angular, vanilla JS,
+Vue, and Svelte. If you’re using a different framework, you can still build
+components by following the guidelines below.
 
 </PageDescription>
 
