--- a/src/pages/developing/frameworks/svelte.mdx
+++ b/src/pages/developing/frameworks/svelte.mdx
@@ -1,16 +1,17 @@
 ---
 title: Frameworks
 description:
-  The Carbon Design System is built React first. We also support core parts of
-  the system in vanilla JS, Angular, Vue, Svelte, and web components.
+  The Carbon Design System is built React first, with official support for Web
+  Components. We also support core parts of the system in Angular, vanilla JS,
+  Vue, and Svelte.
 tabs:
   [
     'React',
-    'Vanilla',
+    'Web Components',
     'Angular',
+    'Vanilla',
     'Vue',
     'Svelte',
-    'Web Components',
     'Other frameworks',
   ]
 ---
