--- a/src/pages/components/code-snippet/usage.mdx
+++ b/src/pages/components/code-snippet/usage.mdx
@@ -224,7 +224,9 @@ An inline code snippet can be copied by clicking anywhere on the snippet itself.
 </Column>
 </Row>
 
-A single line code snippet can be copied by clicking on the "copy" icon. The browser also provides an ability to manually highlight the text and choose "copy" from the context menu (right click).
+A single line code snippet can be copied by clicking on the "copy" icon. The
+browser also provides an ability to manually highlight the text and choose
+"copy" from the context menu (right click).
 
 <Row>
 <Column colLg={8}>
@@ -249,14 +251,16 @@ manually highlighting the text and right clicking "copy".
 
 #### Copy button:
 
-- An inline code snippet, and the copy button of the single line and multiline snippets can be focused by pressing `Tab`.
-- The copy functionality can be activated by pressing either `Space` or `Enter`. 
-- After the copy is activated, the focus remains on the button since there is no change in context.
+- An inline code snippet, and the copy button of the single line and multiline
+  snippets can be focused by pressing `Tab`.
+- The copy functionality can be activated by pressing either `Space` or `Enter`.
+- After the copy is activated, the focus remains on the button since there is no
+  change in context.
 
 #### Show more button:
 
-- The "Show more" ghost button in the multi-line code snippet can be focused by pressing
-  `Tab`.
+- The "Show more" ghost button in the multi-line code snippet can be focused by
+  pressing `Tab`.
 - Show more or less code by pressing `Space` or `Enter` while the ghost button
   is in focus.
 
