chore(frameworks): add community message for vanilla

--- a/src/pages/developing/frameworks/vanilla.mdx
+++ b/src/pages/developing/frameworks/vanilla.mdx
@@ -25,6 +25,14 @@ prototype and production work.
 
 </PageDescription>
 
+<InlineNotification>
+
+The Vanilla library is maintained by members of the Carbon community. For
+support,
+[open an issue on Github](https://github.com/carbon-design-system/carbon/issues/new/choose).
+
+</InlineNotification>
+
 <AnchorLinks>
 
 <AnchorLink>Install</AnchorLink>
