chore(frameworks): add community message for vanilla

--- a/src/pages/developing/frameworks/vanilla.mdx
+++ b/src/pages/developing/frameworks/vanilla.mdx
@@ -27,7 +27,7 @@ prototype and production work.
 
 <InlineNotification>
 
-The Vanilla library is maintained by members of the Carbon community. For
+The vanilla JS library is maintained by members of the Carbon community. For
 support,
 [open an issue on Github](https://github.com/carbon-design-system/carbon/issues/new/choose).
 
