--- a/src/pages/components/file-uploader/usage.mdx
+++ b/src/pages/components/file-uploader/usage.mdx
@@ -166,10 +166,10 @@ file uploader.
 </Column>
 </Row>
 
-1. **Label:** Text to describe the action that needs to be taken.
-2. **Description:** Assistive text to help the user make an informed selection.
-3. **Button or drop zone:** The action to select a file to upload.
-4. **Uploaded file:** A file that has successfully been uploaded.
+1. **Heading:** Text to describe the upload section.
+2. **Description:** Text to help the user make an informed selection.
+3. **Button or drop zone label:** The name of the button that selects a file to upload.
+4. **Uploaded file:** A file that has been selected.
 
 ### Sizing
 
@@ -223,10 +223,10 @@ conflict with the primary action.
 
 ### Main elements
 
-#### Label
+#### Heading
 
-- Labels inform users what needs to be uploaded.
-- Keep the label short and concise by limiting it to a single line of text.
+- Informs users about purpose of section. "Upload files" by default.
+- Keep the heading short and concise by limiting it to a single line of text.
 
 #### Description
 
@@ -239,7 +239,7 @@ conflict with the primary action.
   upon click. "Add files" is the default text that appears with the file
   uploader.
 - Drop zone area text should describe that you can either drag and drop a file
-  into the drop zone or click on the text to upload a file.
+  into the drop zone or click on the button to upload a file.
 
 #### Uploaded file text
 
@@ -280,7 +280,7 @@ uploaded.
 
 #### Mouse
 
-Moving your mouse anywhere within the bounds of the drop zone area with an
+Dragging your mouse anywhere within the bounds of the drop zone area with an
 attached file will enable you to drop it inside of the area and begin to upload.
 
 <Row>
@@ -291,7 +291,7 @@ attached file will enable you to drop it inside of the area and begin to upload.
 </Column>
 </Row>
 
-To remove an uploaded file, click the "x” (or close) icon.
+To remove an uploaded file, click the "x” (or clear) icon.
 
 <Row>
 <Column colLg={8}>
@@ -307,8 +307,6 @@ To remove an uploaded file, click the "x” (or close) icon.
 
 - The file uploader button or drop zone can be activated by pressing `Space` or
   `Enter`.
-- The file uploader button or drop zone should have text or a label that
-  accurately describes the action that will be taken.
 - After the file selection dialog closes, focus should retain the user’s point
   of regard and return to the element that invoked it.
 
@@ -317,15 +315,6 @@ To remove an uploaded file, click the "x” (or close) icon.
 - Pressing `Tab` shifts focus to the “x” icon.
 - Pressing `Space` or `Enter` while the "x" icon is in focus will delete the
   file.
-
-#### Screen readers
-
-- VoiceOver: Users can upload a file by pressing `VO+Space` while the button or
-  drop zone area is in focus.
-- JAWS: Users can upload a file by pressing `Enter` or `Space` while the button
-  or drop zone area is in focus.
-- NVDA: Users can upload a file by pressing `Enter` or `Space` while the button
-  or drop zone area is in focus.
 
 ### Validation
 
