--- a/src/pages/components/file-uploader/usage.mdx
+++ b/src/pages/components/file-uploader/usage.mdx
@@ -225,7 +225,8 @@ conflict with the primary action.
 
 #### Heading
 
-- Informs users about purpose of section. "Upload files" by default.
+- Informs users about the purpose of the upload section. "Upload files" is the default text that appears with the file
+  uploader.
 - Keep the heading short and concise by limiting it to a single line of text.
 
 #### Description
@@ -233,12 +234,12 @@ conflict with the primary action.
 - Descriptions help communicate to the user what file size or format limitations
   there are.
 
-#### Button or drop zone text
+#### Button or drop zone label
 
 - Button labels should be concise and describe the action that will be taken
   upon click. "Add files" is the default text that appears with the file
   uploader.
-- Drop zone area text should describe that you can either drag and drop a file
+- Drop zone area label should describe that you can either drag and drop a file
   into the drop zone or click on the button to upload a file.
 
 #### Uploaded file text
