--- a/src/pages/components/file-uploader/usage.mdx
+++ b/src/pages/components/file-uploader/usage.mdx
@@ -168,8 +168,8 @@ file uploader.
 
 1. **Heading:** Text to describe the upload section.
 2. **Description:** Text to help the user make an informed selection.
-3. **Button or drop zone label:** The name of the button that selects a file to upload.
-4. **Uploaded file:** A file that has been selected.
+3. **Button or drop zone label:** The action to select a file to upload.
+4. **Uploaded file:** A file that has successfully been uploaded.
 
 ### Sizing
 
