fix(frameworks): update angular notice typo

--- a/src/pages/developing/frameworks/angular.mdx
+++ b/src/pages/developing/frameworks/angular.mdx
@@ -31,7 +31,7 @@ The Angular library is maintained by members of the Carbon community. For
 support, contact the
 [Carbon Angular team](https://github.com/IBM/carbon-components-angular/issues/new).
 
-v11 upgrade for Carbon Web Components is coming soon.
+v11 upgrade for Carbon Angular is coming soon.
 
 </InlineNotification>
 
