docs(frameworks): update framework support pages (#2866)
* docs(frameworks): update framework support pages

* chore(prettier): prettier fixes

* chore(frameworks): add community message for vanilla

* chore(frameworks): add community message for vanilla

* fix(frameworks): update angular notice typo

--- a/src/pages/developing/frameworks/vanilla.mdx
+++ b/src/pages/developing/frameworks/vanilla.mdx
@@ -1,16 +1,17 @@
 ---
 title: Frameworks
 description:
-  The Carbon Design System is built React first. We also support core parts of
-  the system in vanilla JS, Angular, Vue, Svelte, and web components.
+  The Carbon Design System is built React first, with official support for Web
+  Components. We also support core parts of the system in Angular, vanilla JS,
+  Vue, and Svelte.
 tabs:
   [
     'React',
-    'Vanilla',
+    'Web Components',
     'Angular',
+    'Vanilla',
     'Vue',
     'Svelte',
-    'Web Components',
     'Other frameworks',
   ]
 ---
@@ -23,6 +24,14 @@ library enables developers to use consistent markup, styles, and behavior in
 prototype and production work.
 
 </PageDescription>
+
+<InlineNotification>
+
+The vanilla JS library is maintained by members of the Carbon community. For
+support,
+[open an issue on Github](https://github.com/carbon-design-system/carbon/issues/new/choose).
+
+</InlineNotification>
 
 <AnchorLinks>
 
