docs(Typography): add classname mixin example and type namesapce

--- a/src/pages/guidelines/typography/code.mdx
+++ b/src/pages/guidelines/typography/code.mdx
@@ -81,6 +81,10 @@ You can use this package by writing the following:
 The `type-classes` mixin will output a collection of utility CSS that you can
 use to style a given HTML element with type-related styles.
 
+```scss
+@mixin type-classes;
+```
+
 In particular, you can use the following classes:
 
 | Class                      | Description                                                                                                                                                                                                           |
@@ -157,7 +161,7 @@ function:
 @use '@carbon/type';
 
 .my-selector {
-  font-size: type-scale(1);
+  font-size: type.type-scale(1);
 }
 ```
 
