docs(developing): update frameworks sentence

--- a/src/pages/developing/get-started.mdx
+++ b/src/pages/developing/get-started.mdx
@@ -26,10 +26,11 @@ checklist of everything you need to get up and running.
 
 ### Install your framework of choice
 
-The Carbon Design System is built React first. We also support core parts of the
-system in vanilla JS, Angular, Vue, and Svelte and offer guidelines for other
-frameworks. Head over to [Frameworks](/developing/frameworks/react) for all the
-information you need to get started.
+The Carbon Design System is built React first, with official support for Web
+Components. We also support core parts of the system in vanilla JS, Angular,
+Vue, and Svelte and offer guidelines for other frameworks. Head over to
+[Frameworks](/developing/frameworks/react) for all the information you need to
+get started.
 
 ### Check out our developer resources
 
