--- a/src/pages/components/file-uploader/usage.mdx
+++ b/src/pages/components/file-uploader/usage.mdx
@@ -292,7 +292,7 @@ attached file will enable you to drop it inside of the area and begin to upload.
 </Column>
 </Row>
 
-To remove an uploaded file, click the "x” (or clear) icon.
+To remove an uploaded file, click the "x” (or delete) icon.
 
 <Row>
 <Column colLg={8}>
