fix(design-resources): update image path

--- a/src/pages/designing/design-resources/index.mdx
+++ b/src/pages/designing/design-resources/index.mdx
@@ -286,7 +286,7 @@ handoff assets to make sure your designs are accessible for implementation.
     href="https://www.figma.com/file/zJlvN4TRbslRtyjFuxIDom/IBM-Accessibility-Design-Kit?node-id=0%3A55"
     actionIcon="launch">
 
-![Figma icon](/images/figma.svg)
+![Figma icon](./images/figma.svg)
 
   </ResourceCard>
 </Column>
