--- a/src/pages/designing/design-resources/index.mdx
+++ b/src/pages/designing/design-resources/index.mdx
@@ -125,8 +125,7 @@ You'll find even more guidance and assets in this file than on the site.
   <ResourceCard
     subTitle="UI Shell template"
     href="https://www.sketch.com/s/6a8e1d7b-f00a-4d8d-9d83-79ecf4dc12a0"
-    actionIcon="launch"
-  >
+    actionIcon="launch">
     <MdxIcon name="sketch" />
   </ResourceCard>
 </Column>
@@ -135,8 +134,7 @@ You'll find even more guidance and assets in this file than on the site.
   <ResourceCard
     subTitle="Text toolbar pattern library"
     href="sketch://add-library/cloud/f32b7e90-d97e-48ef-ae53-beabf75f5846"
-    actionIcon="download"
-  >
+    actionIcon="download">
     <MdxIcon name="sketch" />
   </ResourceCard>
 </Column>
@@ -283,7 +281,7 @@ handoff assets to make sure your designs are accessible for implementation.
   <ResourceCard
     onClick={() => fathom.trackGoal('P0OEN9TS', 0)}
     subTitle="IBM Accessibility Figma kit"
-    href="https://www.figma.com/file/zJlvN4TRbslRtyjFuxIDom/IBM-Accessibility-Design-Kit?node-id=0%3A55"
+    href="https://www.figma.com/file/zJlvN4TRbslRtyjFuxIDom/IBM-Accessibility-Design-Kit?node-id=0%3A1"
     actionIcon="launch">
 
 ![Figma icon](./images/figma.svg)
@@ -304,8 +302,7 @@ before committing to high-fidelity designs.
     <ResourceCard
       subTitle="Carbon Mid-Fi Sketch kit"
       href="sketch://add-library/cloud/e888aa99-4d88-46a4-9b33-3a033e7f5ca2"
-      actionIcon="download"
-    >
+      actionIcon="download">
       <MdxIcon name="sketch" />
     </ResourceCard>
   </Column>
