--- a/src/pages/designing/design-resources/index.mdx
+++ b/src/pages/designing/design-resources/index.mdx
@@ -264,8 +264,8 @@ the patterns and examples, and get started with either the Light or Dark theme.
 
 ## Accessibility
 
-The IBM Accessibility Sketch kit includes checklists, bite-sized guidance, and
-handoff assets to make sure your designs are accessible for implementation.
+The IBM Accessibility kit includes checklists, bite-sized guidance, and handoff
+assets to make sure your designs are accessible for implementation.
 
 <Row className="resource-card-group">
 
