--- a/src/pages/components/file-uploader/usage.mdx
+++ b/src/pages/components/file-uploader/usage.mdx
@@ -170,6 +170,7 @@ file uploader.
 2. **Description:** Text to help the user make an informed selection.
 3. **Button or drop zone label:** The action to select a file to upload.
 4. **Uploaded file:** A file that has successfully been uploaded.
+5. **x:** The delete x icon will remove the uploaded file. 
 
 ### Sizing
 
