docs(file-uploader): run prettier

--- a/src/pages/components/file-uploader/usage.mdx
+++ b/src/pages/components/file-uploader/usage.mdx
@@ -170,7 +170,7 @@ file uploader.
 2. **Description:** Text to help the user make an informed selection.
 3. **Button or drop zone label:** The action to select a file to upload.
 4. **Uploaded file:** A file that has successfully been uploaded.
-5. **x:** The delete `x` icon will remove the uploaded file. 
+5. **x:** The delete `x` icon will remove the uploaded file.
 
 ### Sizing
 
@@ -226,8 +226,8 @@ conflict with the primary action.
 
 #### Heading
 
-- Informs users about the purpose of the upload section. "Upload files" is the default text that appears with the file
-  uploader.
+- Informs users about the purpose of the upload section. "Upload files" is the
+  default text that appears with the file uploader.
 - Keep the heading short and concise by limiting it to a single line of text.
 
 #### Description
