docs(Toggletip): add a11y and code docs

--- a/src/pages/components/toggletip/style.mdx
+++ b/src/pages/components/toggletip/style.mdx
@@ -4,7 +4,7 @@ description:
   Toggletips use the disclosure pattern to toggle the visibility of a popover.
   They display additional, hidden information upon the click of a UI trigger
   element and can contain interactive elements.
-tabs: ['Usage', 'Style']
+tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 ---
 
 ## Color
