chore(project): run prettier

--- a/src/pages/components/accordion/usage.mdx
+++ b/src/pages/components/accordion/usage.mdx
@@ -242,7 +242,10 @@ in the header area.
 
 #### Keyboard
 
-Users can navigate between accordion headers by pressing `Tab` or `Shift-Tab`. Users can trigger a state change by pressing `Enter` or `Space` while the header area has focus. For additional keyboard interactions, see the [accessibility tab](/components/accordion/accessibility#keyboard-interactions).
+Users can navigate between accordion headers by pressing `Tab` or `Shift-Tab`.
+Users can trigger a state change by pressing `Enter` or `Space` while the header
+area has focus. For additional keyboard interactions, see the
+[accessibility tab](/components/accordion/accessibility#keyboard-interactions).
 
 ## Related
 
