chore(project): run prettier

--- a/src/pages/components/button/usage.mdx
+++ b/src/pages/components/button/usage.mdx
@@ -588,7 +588,10 @@ recommended action labels.
 
 ### Primary button
 
-The Primary button is the default action. When dialogs appear, the primary button typically takes focus. On a form, if focus is on a component that is not actionable with the `Enter` key, pressing `Enter` will activate the primary button.
+The Primary button is the default action. When dialogs appear, the primary
+button typically takes focus. On a form, if focus is on a component that is not
+actionable with the `Enter` key, pressing `Enter` will activate the primary
+button.
 
 ### Interactions
 
