--- a/src/pages/components/toggletip/code.mdx
+++ b/src/pages/components/toggletip/code.mdx
@@ -31,6 +31,8 @@ usage documentation, see the Storybooks for each framework below.
 
 ## Live demo
 
+import { Information } from '@carbon/icons-react';
+
 <ComponentDemo
   components={[
     {
@@ -38,10 +40,11 @@ usage documentation, see the Storybooks for each framework below.
       label: 'Toggletip',
     },
   ]}
+  scope={{ Information }}
 >
   <ComponentVariant
     id="toggletip"
-    knobs={{ Toggletip: ['disabled'] }}
+    knobs={{ Toggletip: ['disabled', 'align'] }}
     links={{
       React:
         'https://react.carbondesignsystem.com/?path=/story/components-toggletip--default',
