docs: add a11y figma kit to resources page (#2877)
* add a11y figma kit

* chore(project): output of yarn format

* Update src/pages/designing/design-resources/index.mdx

Co-authored-by: Josh Black <josh@josh.black>

* add: figma icon

* chore(project): run format

* fix(design-resources): update image path

* update link

* update content

* chore(project): run prettier

Co-authored-by: Taylor Jones <taylor.jones826@gmail.com>
Co-authored-by: Josh Black <josh@josh.black>
Co-authored-by: kodiakhq[bot] <49736102+kodiakhq[bot]@users.noreply.github.com>

--- a/src/pages/designing/design-resources/index.mdx
+++ b/src/pages/designing/design-resources/index.mdx
@@ -266,8 +266,8 @@ the patterns and examples, and get started with either the Light or Dark theme.
 
 ## Accessibility
 
-The IBM Accessibility Sketch kit includes checklists, bite-sized guidance, and
-handoff assets to make sure your designs are accessible for implementation.
+The IBM Accessibility kit includes checklists, bite-sized guidance, and handoff
+assets to make sure your designs are accessible for implementation.
 
 <Row className="resource-card-group">
 
@@ -277,6 +277,17 @@ handoff assets to make sure your designs are accessible for implementation.
     href="https://www.sketch.com/s/f0a04c0d-fb62-4d71-92c6-07c402f8cae7"
     actionIcon="launch">
     <MdxIcon name="sketch" />
+  </ResourceCard>
+</Column>
+<Column colLg={4} colMd={4} noGutterSm>
+  <ResourceCard
+    onClick={() => fathom.trackGoal('P0OEN9TS', 0)}
+    subTitle="IBM Accessibility Figma kit"
+    href="https://www.figma.com/file/zJlvN4TRbslRtyjFuxIDom/IBM-Accessibility-Design-Kit?node-id=0%3A1"
+    actionIcon="launch">
+
+![Figma icon](./images/figma.svg)
+
   </ResourceCard>
 </Column>
 </Row>
